data/all_generated_tests/raw_wast_tests/nop_EdgeCaseFailuresinbr_table_729.wast
;; 10. **Test 10: Interleaved `nop` And `br_table` With Premature Index Calculation**    - Interleave `nop` instructions with `br_table` where indices are calculated prematurely to see if `nop` alters the results, especially under concurrent executions.    - Constraint: Ensure that the presence of `nop` maintains the correct order of index evaluation and no premature calculations lead astray.

(assert_invalid
  (module
    (func (block (loop (br_table 0 1 (nop) 0 (nop)))))) 
  "type mismatch"
)